6.k8s-related/breakdown-type-dpl/fullstack/fullstack-demo-chart/templates/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: backend
