6.k8s-related/breakdown-type-dpl/fullstack/fullstack-demo-chart/templates/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: frontend
